--- a/SemantixTestWeb/package.json
+++ b/SemantixTestWeb/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-currency-input-field": "^3.6.4",
+    "react-dom": "^17.0.2",
+    "swr": "^1.2.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
